# globus-cli

./: .envrc  .gitignore  AGENTS.md  README.md  ROADMAP-1_Handle-Zip.md  cron.sh  flake.nix  pyproject.toml  requirements.txt
code/: main.py
code/transfer/: main.py
globus_helper/: logging_config.py  main.py
globus_helper/sh/: batch.txt  setup.sh  sync.sh
globus_helper/transfer/: main.py
globus_sync_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
