[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globus-sync-helper"
version = "0.1.0"
description = "CLI helpers for orchestrating Globus transfers and reshaping actigraphy data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
globus-helper = "globus_helper.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["globus_helper*"]
